--- a/scihelper_desktop/electronscihelper/html/index.html
+++ b/scihelper_desktop/electronscihelper/html/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="../css/photon.min.css">
   <link rel="stylesheet" href="../css/format.css">
+  <link rel="stylesheet" href="../css/bootstrap.min.css">
   <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
   <meta http-equiv="Content-Security-Policy"
     content="default-src *; style-src 'self' http://* 'unsafe-inline'; script-src 'self' http://* 'unsafe-inline' 'unsafe-eval'" />
@@ -14,28 +14,51 @@
 </head>
 
 <body>
-  <h3>SCI Helper</h3>
-  <div>
-    <ul class="list-group">
-      <li class="list-group-item">
-        <label class="label_text">Save path</label>
-        <input type="text" id="id_save_path" value="C:\Users\HAO\Desktop" class="input_box">
-        <button class="btn btn-default"><span class="icon icon-folder"></span></button>
-      </li>
-      <li class="list-group-item">
-        <label class="label_text">Server path</label>
-        <input type="text" id="id_sever_path" value="https://sci-hub.tw/" class="input_box">
-        <button class="btn btn-default"><span class="icon icon-cloud"></span></button>
-      </li>
-      <li class="list-group-item">
-        <label class="label_text">Doi</label>
-        <input type="text" id="id_input_text" value="10.1016/j.arabjc.2017.05.011" class="input_box"></input>
-        <button type="submit" class="btn btn-default" disabled="disabled" id="id_search_btn">Get paper</button>
-      </li>
-    </ul>
+  <h1>SCI Helper</h1>
+  <div class="p-2">
+    <div>
+      <label class="form-label">Save path (default is desktop)</label>
+      <div class="input-group">
+          <input type="text" id="id_save_path" disabled="disabled" class="form-control">
+          <button id="id_folder_btn" class="btn btn-secondary">
+            <svg class="bi bi-folder" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path d="M9.828 4a3 3 0 0 1-2.12-.879l-.83-.828A1 1 0 0 0 6.173 2H2.5a1 1 0 0 0-1 .981L1.546 4h-1L.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3v1z"/>
+              <path fill-rule="evenodd" d="M13.81 4H2.19a1 1 0 0 0-.996 1.09l.637 7a1 1 0 0 0 .995.91h10.348a1 1 0 0 0 .995-.91l.637-7A1 1 0 0 0 13.81 4zM2.19 3A2 2 0 0 0 .198 5.181l.637 7A2 2 0 0 0 2.826 14h10.348a2 2 0 0 0 1.991-1.819l.637-7A2 2 0 0 0 13.81 3H2.19z"/>
+            </svg>
+          </button>
+        </div>
+  
+        <label class="form-label">Server path</label>
+        <div class="input-group">
+          <select type="text" id="id_sever_path" class="form-control">
+            <option selected value="https://sci-hub.tw/">https://sci-hub.tw/</option>
+            <option value="https://sci-hub.st/">https://sci-hub.st/</option>
+            <option value="https://sci-hub.im/">https://sci-hub.im/</option>
+            <option value="https://sci-hub.si/">https://sci-hub.si/</option>
+          </select>
+          <button  id="id_serve_btn" class="btn btn-secondary">
+            <svg class="bi bi-arrow-counterclockwise" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" d="M12.83 6.706a5 5 0 0 0-7.103-3.16.5.5 0 1 1-.454-.892A6 6 0 1 1 2.545 5.5a.5.5 0 1 1 .91.417 5 5 0 1 0 9.375.789z"/>
+              <path fill-rule="evenodd" d="M7.854.146a.5.5 0 0 0-.708 0l-2.5 2.5a.5.5 0 0 0 0 .708l2.5 2.5a.5.5 0 1 0 .708-.708L5.707 3 7.854.854a.5.5 0 0 0 0-.708z"/>
+            </svg>
+          </button>
+        </div>
+  
+        <label class="form-label">Doi</label>
+        <div class="input-group">
+          <input type="text" id="id_input_text" value="10.1016/j.arabjc.2017.05.011" class="form-control"></input>
+          <button type="submit" disabled="disabled" class="btn btn-secondary" id="id_search_btn">
+            <svg class="bi bi-arrow-down-circle-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 5a.5.5 0 0 0-1 0v4.793L5.354 7.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 9.793V5z"/>
+            </svg>
+          </button>
+        </div>
+    </div>
   </div>
+
   <!-- You can also require other files to run in this process -->
   <script src="../js/controller.js"></script>
+
 </body>
 
 </html>
