--- a/scihelper_desktop/electronscihelper/html/index.html
+++ b/scihelper_desktop/electronscihelper/html/index.html
@@ -56,7 +56,7 @@
       </div>
       <p></p>
       <div class="progress">
-        <div class="progress-bar" role="progressbar" id="id_process_bar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+        <div class="progress-bar" role="progressbar" id="id_process_bar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">I will help you find the paper</div>
       </div>
   </div>
 
